gs-spring-boot-docker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gs-spring-boot-docker-deployment
  labels:
    app: gs-spring-boot-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gs-spring-boot-docker
  template:
    metadata:
      labels:
        app: gs-spring-boot-docker
    spec:
      containers:
      - name: gs-spring-boot-docker
        image: nara0617/gs-spring-boot-docker:1.0
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
