spring-cloud-msa-webapp02.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-cloud-msa-webapp02
  namespace: spring-cloud
spec:
  replicas: 1
  minReadySeconds: 20
  template:
    metadata:
      labels:
        app: spring-cloud-msa-webapp02
    spec:
      volumes:
      - name : log-path
        hostPath:
          path: /home/k8s/data/msa-server/logs
      containers:
      - name: spring-cloud-msa-webapp02
        image: sky01126/spring-cloud-msa-webapp02:1.0.0.RELEASE
        args: ["$(JAVA_OPTS)"]
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
        imagePullPolicy: Always # IfNotPresent
        ports:
        - containerPort: 18082
        volumeMounts:
        - name: log-path
          mountPath: /home/logs
