gs-spring-boot-docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gs-spring-boot-docker-service
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8080
  selector:
    app: gs-spring-boot-docker
  type: NodePort
