spring-cloud-config-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-config-server
  namespace: spring-cloud
  labels:
    app: spring-cloud-config-server
spec:
  ports:
  - name: http
    port: 8888
    targetPort: 8888
  selector:
    app: spring-cloud-config-server
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-cloud-config-server
  namespace: spring-cloud
spec:
  replicas: 1
  minReadySeconds: 20
  template:
    metadata:
      labels:
        app: spring-cloud-config-server
    spec:
      volumes:
      - name : log-path
        hostPath:
          path: /home/k8s/data/config-server/logs
      containers:
      - name: spring-cloud-config-server
        image: sky01126/spring-cloud-config-server:1.0.0.RELEASE
        args: ["$(JAVA_OPTS)"]
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
        imagePullPolicy: Always # IfNotPresent
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: log-path
          mountPath: /home/logs
      #nodeSelector:
      #  kubernetes.io/hostname: "k8smaster02"
      nodeName: k8smaster02
