spring-cloud-zuul-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-zuul-server
  namespace: spring-cloud
  labels:
    app: spring-cloud-zuul-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: spring-cloud-zuul-server
  type: NodePort
  externalIPs:
  - 172.16.109.151
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-cloud-zuul-server
  namespace: spring-cloud
spec:
  replicas: 2
  minReadySeconds: 20
  template:
    metadata:
      labels:
        app: spring-cloud-zuul-server
    spec:
      volumes:
      - name : log-path
        hostPath:
          path: /home/k8s/data/zuul-server/logs
      containers:
      - name: spring-cloud-zuul-server
        image: sky01126/spring-cloud-zuul-server:1.0.0.RELEASE
        args: ["$(JAVA_OPTS)"]
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
        imagePullPolicy: Always # IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: log-path
          mountPath: /home/logs
