zipkin-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-server
  namespace: spring-cloud
  labels:
    app: zipkin-server
spec:
  ports:
  - name: http
    port: 9411
    targetPort: 9411
  selector:
    app: zipkin-server
  type: NodePort
  externalIPs:
  - 172.16.109.151
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin-server
  namespace: spring-cloud
spec:
  replicas: 1
  minReadySeconds: 20
  template:
    metadata:
      labels:
        app: zipkin-server
    spec:
      containers:
      - name: zipkin-server
        image: sky01126/zipkin-server:2.12.7
        args: ["$(JAVA_OPTS)"]
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
        imagePullPolicy: Always # IfNotPresent
        ports:
        - containerPort: 9411
